# markright

./: .gitignore  .mcp.json  .prototools  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.right  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
crates/markright/: Cargo.toml  moon.yml
crates/markright-lsp/: Cargo.toml
crates/markright-lsp/src/: main.rs
crates/markright-mcp/: Cargo.toml
crates/markright-mcp/src/: main.rs
crates/markright/src/: extract.rs  format.rs  lib.rs  lint.rs  main.rs  render.rs  yaml.rs
crates/markright/src/ast/: block.rs  common.rs  inline.rs  mod.rs
crates/markright/src/parse/: mod.rs
crates/markright/src/parse/block/: admonition.rs  code.rs  comment.rs  definition.rs  div.rs  divider.rs  footnote.rs  heading.rs  include.rs  list.rs  math.rs  mod.rs  quote.rs  table.rs  toc.rs
crates/markright/src/parse/inline/: citation.rs  code.rs  emphasis.rs  footnote.rs  link.rs  math.rs  mod.rs  super_sub.rs  wikilink.rs
crates/markright/tests/: fixtures_test.rs  roundtrip_test.rs
crates/markright/tests/fixtures/: basic-blocks.test.ast.json  basic-blocks.test.right  heading.test.ast.json  heading.test.right
crates/markright/tests/fixtures/admonitions/: 01-note-single-line.test.ast.json  01-note-single-line.test.right  02-tip-single-line.test.ast.json  02-tip-single-line.test.right  03-warning-single-line.test.ast.json  03-warning-single-line.test.right  04-important-single-line.test.ast.json  04-important-single-line.test.right  05-caution-single-line.test.ast.json  05-caution-single-line.test.right  06-note-multi-line.test.ast.json  (+109 more)
(+2947 files in other folders)
