[package]
name = "markright-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for MarkRight -- AI agents can parse, render, format, and query .right files"

[[bin]]
name = "markright-mcp"
path = "src/main.rs"

[dependencies]
markright = { path = "../markright" }
rmcp = { version = "1", features = ["server", "transport-io", "macros"] }
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
